@@ -32,3 +32,4 @@ Tuomas Jormola <tj@solitudo.net> -- "when = manual" option
 Ian Beckwith <ianb@erislabs.net> -- dup bandwidthlimit fix
 Olivier Berger <oberger@ouvaton.org> -- dup debug output bugfix, reportinfo option
 stefan <s.freudenberg@jpberlin.de> -- dup support for Amazon S3 buckets
+maniacmartin <martin@maniacmartin.com> -- rdiff confusing error message fix
